# bolib2

./: .coveralls.yml  .gitmodules  .travis.yml  .vimrc_local  CMakeLists.txt  README.md  TestCommon.h  bolib.h.in  bolib.pc.in  gitinit.sh
cmake/: macs.cmake
ext/: CMakeLists.txt
include/: bolib.h.in  btypes.h.in  int_type.h.in
include/bolib/: btypes.h.in  int_type.h.in
include/bolib/data/: Iterator.h  List.h  Str.h  Vector.h
include/bolib/file/: File.h  FilePath.h  MmlFile.h  RomFile.h  TestRomFile.h  TextFile.h  libfile.h
include/bolib/memory/: bmem.h
include/data/: Iterator.h  List.h  Str.h  Vector.h
include/file/: File.h  FilePath.h  MmlFile.h  RomFile.h  TestRomFile.h  TextFile.h  libfile.h
include/memory/: bmem.h
src/: CMakeLists.txt  bolib2.c  main.c
src/bolib/data/: Iterator.c  List.c  List.protected.h  Str.c  Vector.c  Vector.protected.h
src/bolib/file/: File.c  File.protected.h  FilePath.c  MmlFile.c  RomFile.c  RomFile.protected.h  TestRomFile.c  TextFile.c  TextFile.protected.h  libfile.c
src/bolib/memory/: bmem.c
src/bolib/msvc/: msvcfunc.c
src/data/: Iterator.c  Iterator.protected.h  List.c  Str.c  Vector.c
src/file/: File.c  File.protected.h  FilePath.c  MmlFile.c  MmlFile.protected.h  RomFile.c  RomFile.protected.h  TestRomFile.c  TextFile.c  TextFile.protected.h  libfile.c
src/memory/: bmem.c
src/msvc/: msvcfunc.c
test/: CMakeLists.txt  main.cpp
test/bolib/: bolib2Test.cpp
test/bolib/data/: IteratorTest.cpp  ListTest.cpp  StrTest.cpp  VectorTest.cpp
test/bolib/file/: FilePathTest.cpp  FileTest.cpp  MmlFileTest.cpp  RomFileTest.cpp  RomFileTest_Address.cpp  TestRomFileTest.cpp  TextFileTest.cpp  libfileTest.cpp
test/bolib/memory/: bmemTest.cpp
test/data/: IteratorTest.cpp  ListTest.cpp  StrTest.cpp  VectorTest.cpp
test/file/: FilePathTest.cpp  FileTest.cpp  MmlFileTest.cpp  RomFileTest.cpp  RomFileTest_Address.cpp  TestRomFileTest.cpp  TextFileTest.cpp  libfileTest.cpp
test/memory/: bmemTest.cpp
testdata/: .gitignore
testdata/file/: exists.txt
